After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 682791 - Fix display of non-ASCII strings in test-ui
Fix display of non-ASCII strings in test-ui
Status: RESOLVED FIXED
Product: grilo
Classification: Other
Component: core
0.2.x
Other Linux
: Normal normal
: ---
Assigned To: grilo-maint
grilo-maint
Depends on:
Blocks:
 
 
Reported: 2012-08-27 11:24 UTC by Jens Georg
Modified: 2012-09-03 10:03 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix issue (933 bytes, patch)
2012-08-27 11:24 UTC, Jens Georg
committed Details | Review

Description Jens Georg 2012-08-27 11:24:46 UTC
Created attachment 222525 [details] [review]
Fix issue

g_strdup_value_contents uses g_strescape on non-ASCII chars so it ends up with \x-escaped chars in test ui.

The patch uses g_value_dup_string instead if the GValue holds a string.
Comment 1 Juan A. Suarez Romero 2012-09-03 10:03:25 UTC
commit c80c75e682edc76e73e4fca5d772711226bc9d53
Author: Jens Georg <jensg@openismus.com>
Date:   Tue Jul 17 15:35:23 2012 +0200

    test-ui: Fix garbled UTF-8 output
    
    g_strdup_value_contents uses g_strescape on anything that's not ASCII
    which garbles anything fancy in the UI.
    
    This fixes https://bugzilla.gnome.org/show_bug.cgi?id=682791

 tools/grilo-test-ui/main.c | 2 ++
 1 file changed, 2 insertions(+)