test-ui: Fix garbled UTF-8 output

g_strdup_value_contents uses g_strescape on anything that's not ASCII
which garbles anything fancy in the UI.

This fixes https://bugzilla.gnome.org/show_bug.cgi?id=682791